<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout
    android:id="@+id/swipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:id="@+id/swipeDireita"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/deleteColor"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/ic_trash"/>

        <TextView
            android:id="@+id/txtDeletar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_deletar"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/btnDeletar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_confirmation_delete"
            android:theme="@style/ButtonDelete"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/swipeEsquerda"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/btnLocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:src="@drawable/ic_map"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:elevation="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/string_titulo"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitulo"
            android:layout_margin="5dp"
            android:text="@string/string_subtitulo"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>

        <ImageButton
            android:id="@+id/btnContext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/txtTitulo"
            android:background="@null"
            android:clickable="true"
            android:paddingTop="8dp"
            android:src="@drawable/ic_context"/>
    </RelativeLayout>

</com.daimajia.swipe.SwipeLayout>

